--- a/BiEsPro.Web/Views/Shared/_Layout.cshtml
+++ b/BiEsPro.Web/Views/Shared/_Layout.cshtml
@@ -72,6 +72,7 @@
         </script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/css/site.css" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
