--- a/BiEsPro.Web/wwwroot/css/site.css
+++ b/BiEsPro.Web/wwwroot/css/site.css
@@ -54,3 +54,7 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+.hr-2 {
+    background-color:black;
+    width:6px;
+}
