--- a/BiEsPro.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BiEsPro.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,8 +8,29 @@
     <hr class="hr-2" />
     <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
         <h4>Create a new account.</h4>
-        <hr class="hr-2" />
+
         <div asp-validation-summary="All" class="text-danger"></div>
+        <hr class="hr-2" />
+        <div class="row">
+            <div class="form-group col-12">
+                <label asp-for="Input.Username"></label>
+                <input asp-for="Input.Username" class="form-control" />
+                <span asp-validation-for="Input.Username" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-6">
+                <label asp-for="Input.Password"></label>
+                <input asp-for="Input.Password" class="form-control" />
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
+            <div class="form-group col-6">
+                <label asp-for="Input.ConfirmPassword"></label>
+                <input asp-for="Input.ConfirmPassword" class="form-control" />
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+        </div>
+        <hr class="hr-2" />
         <div class="row">
             <div class="form-group col-6">
                 <label asp-for="Input.FirstName"></label>
@@ -43,20 +64,6 @@
             </div>
         </div>
         <hr class="hr-2" />
-        <div class="row">
-            <hr class="hr-2" />
-            <div class="form-group col-6">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group col-6">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-        </div>
-        <hr class="hr-2" />
         <div class="row justify-content-center">
             <button type="submit" class="btn btn-primary">Register</button>
         </div>
@@ -65,5 +72,5 @@
 
 
 @section Scripts {
-<partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
 }
