--- a/BiEsPro.Web/Views/ClientCompanies/Create.cshtml
+++ b/BiEsPro.Web/Views/ClientCompanies/Create.cshtml
@@ -66,7 +66,7 @@
                 <input asp-for="IBAN" class="form-control" />
                 <span asp-validation-for="IBAN" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="CreatedOn" class="control-label"></label>
                 <input asp-for="CreatedOn" class="form-control" />
                 <span asp-validation-for="CreatedOn" class="text-danger"></span>
@@ -87,7 +87,7 @@
                 <label asp-for="DeletedOn" class="control-label"></label>
                 <input asp-for="DeletedOn" class="form-control" />
                 <span asp-validation-for="DeletedOn" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
